[gd_scene load_steps=9 format=3 uid="uid://dhwrh0jiqkgw5"]

[ext_resource type="Script" uid="uid://dduhd6vas1hiq" path="res://scripts/levelTemplate.gd" id="1_3b3nu"]
[ext_resource type="PackedScene" uid="uid://dxk8jo7f1ogdk" path="res://scenes/objects/ball.tscn" id="2_dh3sk"]
[ext_resource type="PackedScene" uid="uid://r23675mm0hgs" path="res://scenes/objects/barrier.tscn" id="3_fstfe"]
[ext_resource type="PackedScene" uid="uid://c0pnlawl8f31x" path="res://scenes/objects/broom.tscn" id="4_q6akh"]
[ext_resource type="PackedScene" uid="uid://dhs2rkoq36qwu" path="res://scenes/objects/floorHole.tscn" id="5_8po4y"]
[ext_resource type="PackedScene" uid="uid://yo1f0wifig7q" path="res://scenes/objects/ceilingFan.tscn" id="6_dh3sk"]
[ext_resource type="PackedScene" uid="uid://cuiuy4cscgf6i" path="res://scenes/objects/edgeRamp.tscn" id="7_2r1tl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhna4"]
size = Vector2(2098, 1181)

[node name="lvl1" type="Node2D"]
script = ExtResource("1_3b3nu")
ball = ExtResource("2_dh3sk")

[node name="levelGeometry" type="Node2D" parent="."]

[node name="CeilingFan" parent="levelGeometry" instance=ExtResource("6_dh3sk")]
position = Vector2(61, 0)
scale = Vector2(1.2, 1.2)

[node name="leftRamp" parent="levelGeometry" instance=ExtResource("7_2r1tl")]
position = Vector2(-1005, 0)
scale = Vector2(1, 2.475)

[node name="bottomRamp" parent="levelGeometry" instance=ExtResource("7_2r1tl")]
position = Vector2(0, 551)
rotation = 4.71239
scale = Vector2(1, 4.195)

[node name="upperRamp" parent="levelGeometry" instance=ExtResource("7_2r1tl")]
position = Vector2(0, -556)
rotation = 1.5708
scale = Vector2(1, 4.195)

[node name="rightRamp" parent="levelGeometry" instance=ExtResource("7_2r1tl")]
position = Vector2(1019, 6.85674e-12)
rotation = 3.14159
scale = Vector2(1, 2.475)

[node name="outerLeft" parent="levelGeometry" instance=ExtResource("3_fstfe")]
position = Vector2(-1074, -140)
scale = Vector2(1, 24.57)

[node name="outerRight" parent="levelGeometry" instance=ExtResource("3_fstfe")]
position = Vector2(1088, -14)
scale = Vector2(1, 24.465)

[node name="outerLower" parent="levelGeometry" instance=ExtResource("3_fstfe")]
position = Vector2(19, 620)
rotation = -1.5709
scale = Vector2(1, 34.17)

[node name="outerUpper" parent="levelGeometry" instance=ExtResource("3_fstfe")]
position = Vector2(14, -625)
rotation = -1.5709
scale = Vector2(1, 33.51)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(-6.10352e-05, 0)
zoom = Vector2(0.9, 0.9)

[node name="Broom" parent="." instance=ExtResource("4_q6akh")]
top_level = true
z_index = 3
position = Vector2(935, 0)
rotation = 3.14159

[node name="levelBoundary" type="Area2D" parent="."]
position = Vector2(-596, -512)

[node name="boundaryShape" type="CollisionShape2D" parent="levelBoundary"]
visible = false
position = Vector2(603, 509.5)
shape = SubResource("RectangleShape2D_yhna4")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="hole" parent="." instance=ExtResource("5_8po4y")]
position = Vector2(-702, 0)
scale = Vector2(0.863, 0.719)

[connection signal="body_exited" from="levelBoundary" to="hole" method="_on_level_boundary_body_exited"]
[connection signal="mouse_entered" from="levelBoundary" to="Broom" method="mouseInLevelBoundary"]
[connection signal="mouse_exited" from="levelBoundary" to="Broom" method="mouseOutLevelBoundary"]
