[gd_scene load_steps=9 format=3 uid="uid://hsijj5mj7xej"]

[ext_resource type="Script" uid="uid://dduhd6vas1hiq" path="res://scripts/levelTemplate.gd" id="1_f5jb5"]
[ext_resource type="PackedScene" uid="uid://dxk8jo7f1ogdk" path="res://scenes/objects/ball.tscn" id="2_frjko"]
[ext_resource type="PackedScene" uid="uid://r23675mm0hgs" path="res://scenes/objects/barrier.tscn" id="3_f7rt6"]
[ext_resource type="PackedScene" uid="uid://c0pnlawl8f31x" path="res://scenes/objects/broom.tscn" id="4_8w0pe"]
[ext_resource type="PackedScene" uid="uid://cuiuy4cscgf6i" path="res://scenes/objects/edgeRamp.tscn" id="4_f7rt6"]
[ext_resource type="PackedScene" uid="uid://b3i2q4rey8avm" path="res://scenes/objects/obstacle.tscn" id="4_frjko"]
[ext_resource type="PackedScene" uid="uid://dhs2rkoq36qwu" path="res://scenes/objects/floorHole.tscn" id="5_7eb4w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhna4"]
size = Vector2(2098, 1181)

[node name="lvl3" type="Node2D"]
script = ExtResource("1_f5jb5")
ball = ExtResource("2_frjko")

[node name="levelGeometry" type="Node2D" parent="."]

[node name="Obstacle" parent="levelGeometry" instance=ExtResource("4_frjko")]
position = Vector2(0, -174)
scale = Vector2(4.12, 1.16)

[node name="leftRamp" parent="levelGeometry" instance=ExtResource("4_f7rt6")]
position = Vector2(-1005, 0)
scale = Vector2(1, 2.475)

[node name="bottomRamp" parent="levelGeometry" instance=ExtResource("4_f7rt6")]
position = Vector2(0, 551)
rotation = 4.71239
scale = Vector2(1, 4.195)

[node name="upperRamp" parent="levelGeometry" instance=ExtResource("4_f7rt6")]
position = Vector2(0, -556)
rotation = 1.5708
scale = Vector2(1, 4.195)

[node name="rightRamp" parent="levelGeometry" instance=ExtResource("4_f7rt6")]
position = Vector2(1019, 6.85674e-12)
rotation = 3.14159
scale = Vector2(1, 2.475)

[node name="outerLeft" parent="levelGeometry" instance=ExtResource("3_f7rt6")]
position = Vector2(-1074, -140)
scale = Vector2(1, 24.57)

[node name="outerRight" parent="levelGeometry" instance=ExtResource("3_f7rt6")]
position = Vector2(1088, -14)
scale = Vector2(1, 24.465)

[node name="outerLower" parent="levelGeometry" instance=ExtResource("3_f7rt6")]
position = Vector2(19, 620)
rotation = -1.5709
scale = Vector2(1, 34.17)

[node name="outerUpper" parent="levelGeometry" instance=ExtResource("3_f7rt6")]
position = Vector2(14, -625)
rotation = -1.5709
scale = Vector2(1, 33.51)

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)

[node name="Broom" parent="." instance=ExtResource("4_8w0pe")]
top_level = true
z_index = 3
position = Vector2(0, 393)
rotation = 4.71239

[node name="levelBoundary" type="Area2D" parent="."]
position = Vector2(-595, -513)

[node name="boundaryShape" type="CollisionShape2D" parent="levelBoundary"]
visible = false
position = Vector2(602, 510.5)
shape = SubResource("RectangleShape2D_yhna4")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="hole" parent="." instance=ExtResource("5_7eb4w")]
position = Vector2(0, -368)
rotation = 0.000501706
scale = Vector2(1.04297, 0.52247)

[connection signal="body_exited" from="levelBoundary" to="hole" method="_on_level_boundary_body_exited"]
[connection signal="mouse_entered" from="levelBoundary" to="Broom" method="mouseInLevelBoundary"]
[connection signal="mouse_exited" from="levelBoundary" to="Broom" method="mouseOutLevelBoundary"]
