[gd_scene load_steps=9 format=3 uid="uid://dodlcm54o7hm3"]

[ext_resource type="Script" uid="uid://dduhd6vas1hiq" path="res://scripts/levelTemplate.gd" id="1_v1pya"]
[ext_resource type="PackedScene" uid="uid://dxk8jo7f1ogdk" path="res://scenes/objects/ball.tscn" id="2_qsj6i"]
[ext_resource type="PackedScene" uid="uid://r23675mm0hgs" path="res://scenes/objects/barrier.tscn" id="3_dju2a"]
[ext_resource type="PackedScene" uid="uid://b3i2q4rey8avm" path="res://scenes/objects/obstacle.tscn" id="4_v0vb7"]
[ext_resource type="PackedScene" uid="uid://c0pnlawl8f31x" path="res://scenes/objects/broom.tscn" id="5_lsgss"]
[ext_resource type="PackedScene" uid="uid://yo1f0wifig7q" path="res://scenes/objects/ceilingFan.tscn" id="5_qsj6i"]
[ext_resource type="PackedScene" uid="uid://dhs2rkoq36qwu" path="res://scenes/objects/floorHole.tscn" id="6_sd6f7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhna4"]
size = Vector2(2058, 1130)

[node name="lvl5" type="Node2D"]
script = ExtResource("1_v1pya")
ball = ExtResource("2_qsj6i")

[node name="levelGeometry" type="Node2D" parent="."]

[node name="outerLeft" parent="levelGeometry" instance=ExtResource("3_dju2a")]
position = Vector2(-1064, -16)
scale = Vector2(1, 24.57)

[node name="outerRight" parent="levelGeometry" instance=ExtResource("3_dju2a")]
position = Vector2(1072, 0)
scale = Vector2(1, 24.465)

[node name="outerLower" parent="levelGeometry" instance=ExtResource("3_dju2a")]
position = Vector2(0, 600)
rotation = -1.5709
scale = Vector2(1, 33.265)

[node name="outerUpper" parent="levelGeometry" instance=ExtResource("3_dju2a")]
position = Vector2(0, -600)
rotation = -1.5709
scale = Vector2(1, 32.48)

[node name="Obstacle" parent="levelGeometry" instance=ExtResource("4_v0vb7")]
position = Vector2(-683, 201)
scale = Vector2(3.815, 1)

[node name="CeilingFan" parent="levelGeometry" instance=ExtResource("5_qsj6i")]
position = Vector2(-202, -350)
scale = Vector2(0.8, 0.8)
fanForce = 1e+07
fanRotation = 7.5

[node name="CeilingFan2" parent="levelGeometry" instance=ExtResource("5_qsj6i")]
position = Vector2(-202, 28)
scale = Vector2(0.8, 0.8)
fanForce = 1e+07
fanRotation = 7.5

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)

[node name="Broom" parent="." instance=ExtResource("5_lsgss")]
top_level = true
z_index = 3
position = Vector2(674, 393)
rotation = 4.37056

[node name="levelBoundary" type="Area2D" parent="."]
position = Vector2(-595, -513)

[node name="boundaryShape" type="CollisionShape2D" parent="levelBoundary"]
visible = false
position = Vector2(596, 512)
shape = SubResource("RectangleShape2D_yhna4")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="hole" parent="." instance=ExtResource("6_sd6f7")]
z_index = 2
position = Vector2(-765, -208)
rotation = 0.000501706

[connection signal="body_exited" from="levelBoundary" to="hole" method="_on_level_boundary_body_exited"]
[connection signal="mouse_entered" from="levelBoundary" to="Broom" method="mouseInLevelBoundary"]
[connection signal="mouse_exited" from="levelBoundary" to="Broom" method="mouseOutLevelBoundary"]
